// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Film renders correctly with full props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Film
    film={
      Object {
        "id": 1,
        "poster_path": "/img1234_0987",
        "release_date": "1999",
        "title": "Pulp Fiction",
      }
    }
    onClick={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          replace={false}
          to="/film/1"
        >
          <Poster
            path="/img1234_0987"
          />
        </Link>,
        <div
          className="top-info"
        >
          <Link
            className="title"
            replace={false}
            to="/film/1"
          >
            Pulp Fiction
          </Link>
          <span
            className="year"
          >
            1999
          </span>
        </div>,
        <div
          className="bottom-info"
        />,
      ],
      "className": "film",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": <Poster
            path="/img1234_0987"
          />,
          "replace": false,
          "to": "/film/1",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "path": "/img1234_0987",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Link
              className="title"
              replace={false}
              to="/film/1"
            >
              Pulp Fiction
            </Link>,
            <span
              className="year"
            >
              1999
            </span>,
          ],
          "className": "top-info",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": "Pulp Fiction",
              "className": "title",
              "replace": false,
              "to": "/film/1",
            },
            "ref": null,
            "rendered": "Pulp Fiction",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "1999",
              "className": "year",
            },
            "ref": null,
            "rendered": "1999",
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "className": "bottom-info",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            replace={false}
            to="/film/1"
          >
            <Poster
              path="/img1234_0987"
            />
          </Link>,
          <div
            className="top-info"
          >
            <Link
              className="title"
              replace={false}
              to="/film/1"
            >
              Pulp Fiction
            </Link>
            <span
              className="year"
            >
              1999
            </span>
          </div>,
          <div
            className="bottom-info"
          />,
        ],
        "className": "film",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": <Poster
              path="/img1234_0987"
            />,
            "replace": false,
            "to": "/film/1",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "path": "/img1234_0987",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Link
                className="title"
                replace={false}
                to="/film/1"
              >
                Pulp Fiction
              </Link>,
              <span
                className="year"
              >
                1999
              </span>,
            ],
            "className": "top-info",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": "Pulp Fiction",
                "className": "title",
                "replace": false,
                "to": "/film/1",
              },
              "ref": null,
              "rendered": "Pulp Fiction",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "1999",
                "className": "year",
              },
              "ref": null,
              "rendered": "1999",
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "className": "bottom-info",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Film renders correctly with partial props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Film
    film={
      Object {
        "id": 2,
        "title": "Taxi",
      }
    }
    onClick={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          replace={false}
          to="/film/2"
        >
          <Poster
            path=""
          />
        </Link>,
        <div
          className="top-info"
        >
          <Link
            className="title"
            replace={false}
            to="/film/2"
          >
            Taxi
          </Link>
        </div>,
        <div
          className="bottom-info"
        />,
      ],
      "className": "film",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": <Poster
            path=""
          />,
          "replace": false,
          "to": "/film/2",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "path": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Link
              className="title"
              replace={false}
              to="/film/2"
            >
              Taxi
            </Link>,
            null,
          ],
          "className": "top-info",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": "Taxi",
              "className": "title",
              "replace": false,
              "to": "/film/2",
            },
            "ref": null,
            "rendered": "Taxi",
            "type": [Function],
          },
          null,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "className": "bottom-info",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            replace={false}
            to="/film/2"
          >
            <Poster
              path=""
            />
          </Link>,
          <div
            className="top-info"
          >
            <Link
              className="title"
              replace={false}
              to="/film/2"
            >
              Taxi
            </Link>
          </div>,
          <div
            className="bottom-info"
          />,
        ],
        "className": "film",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": <Poster
              path=""
            />,
            "replace": false,
            "to": "/film/2",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "path": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Link
                className="title"
                replace={false}
                to="/film/2"
              >
                Taxi
              </Link>,
              null,
            ],
            "className": "top-info",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": "Taxi",
                "className": "title",
                "replace": false,
                "to": "/film/2",
              },
              "ref": null,
              "rendered": "Taxi",
              "type": [Function],
            },
            null,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "className": "bottom-info",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
